# mmpose-ext

./: .gitignore  pyproject.toml
mmpose_ext/configs/_base_/: default_runtime.py
mmpose_ext/configs/_base_/datasets/: coco_body_with_hand.py
mmpose_ext/configs/wholebody_2d_keypoint/rtmpose/: rtmw-l_8xb320-270e_body_with_hand-384x288.py
mmpose_ext/configs/wholebody_2d_keypoint/rtmpose/cocktail13/: rtmw-l_8xb320-270e_cocktail14-384x288.py
mmpose_ext/datasets/: __init__.py  coco_body_with_hand_dataset.py
