[project]
name = "mmpose-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=1.4.21",
    "chumpy>=0.70",
    "mmcv>=2.2.0",
    "mmdet>=3.3.0",
    "mmengine>=0.10.5",
    "mmpose>=1.3.2",
    "numpy<2.0",
    "openmim>=0.3.9",
    "ruff>=0.7.3",
    "wandb>=0.18.6",
    "xtcocotools>=1.14.3",
]

[tool.uv]
no-build-isolation-package = ["chumpy"]
find-links = ["https://download.openmmlab.com/mmcv/dist/cu121/torch2.4/index.html"]
